# hyproxy

./: .dockerignore  .env.dev.example  .env.example  .env.staging.example  .gitignore  CLAUDE.md  Makefile  README.md  ROLLOUT.md  THEME-ASSETS.md  bootstrap-prod.sh  bootstrap.sh  build.sh  docker-compose.yml  install.sh  rebuild-staging.sh  run.sh  start-dev.sh  start-prod.sh  start-staging.sh  start.sh  stop.sh
server/: Dockerfile  README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0573d487a0cc_resource_public_host.py  278129ba7514_gateway_sessions_and_login_states.py  36ac9803bb39_session_stepup_challenge.py  63f071395d1e_initial_schema.py  a1c4f7e2b9d0_resource_connections.py  b66be004150c_login_flow_recovery_used.py  c3e9a1f0b2d7_log_ship_cursors.py  c9b7e5a31d84_download_target_rename.py  d4a2c1e9f8b7_login_flow_completed_session.py  e5d0c7a3f1b6_clear_guac_public_host.py  e7b3d9c41a52_user_is_protected.py  f2a8c5d17e93_download_requests.py
server/scripts/: devdb.py  gen_dev_certs.py
server/src/homeproxy/: __init__.py  cli.py  config.py
server/src/homeproxy/admin/: schemas.py
server/src/homeproxy/admin/routes/: policies.py  user_roles.py
server/src/homeproxy/authz/: app.py  check.py  gateway.py
server/src/homeproxy/core/: keys.py
server/src/homeproxy/db/: engine.py  models.py
server/src/homeproxy/idp/: app.py  flows.py  sessions.py
server/src/homeproxy/idp/oidc/: authorize.py  codes.py  dpop.py  tokens.py
server/src/homeproxy/policy/: engine.py
server/src/homeproxy/security/: passwords.py  ratelimit.py  totp.py
server/src/hyproxy/: cli.py  config.py  logs.py
server/src/hyproxy/admin/: app.py  changes.py  deps.py  qbit.py  schemas.py
server/src/hyproxy/audit/: events.py  shipping.py
server/src/hyproxy/authz/: app.py  check.py  decision.py  gateway.py  guac.py  gwkey.py  routes.py
server/src/hyproxy/core/: crypto.py  netutil.py  reencrypt.py  secrets.py  time.py
server/src/hyproxy/db/: engine.py  models.py
server/src/hyproxy/guac/: __init__.py  broker.py  connections.py  token.py
server/src/hyproxy/idp/: app.py  flows.py  sessions.py
server/src/hyproxy/ops/: __init__.py  ddns.py
server/src/hyproxy/policy/: engine.py
server/src/hyproxy/security/: pkce.py  recovery.py  totp.py  webauthn.py
server/tests/: conftest.py  helpers.py
server/tests/e2e/: backend_app.py
server/tests/integration/: conftest.py  test_admin_api.py  test_admin_spa.py  test_connections.py  test_dpop_replay_cache.py  test_gateway_authz.py  test_guac_broker.py  test_log_shipping.py  test_login_flow.py  test_oidc_core.py  test_signing_keys.py  test_stepup_page.py  test_totp_login.py  test_viewers.py
server/tests/rp/: app.py
server/tests/unit/: test_audit_detail.py  test_client_ip.py  test_ddns.py  test_dpop.py  test_guac_connection_sealing.py  test_pkce.py  test_policy_engine.py  test_secrets_backends.py  test_stepup_return.py  test_totp_and_recovery_units.py
(+142 files in other folders)
