[project]
name = "hyproxy"
version = "0.1.0"
description = "Identity-aware reverse proxy: control plane and self-built OIDC IdP (Phase 1)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "joserfc>=1.0",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    # QR for TOTP enrollment; pure-Python, no transitive deps.
    "segno>=1.6",
    "webauthn>=2.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "cryptography>=43",
    "click>=8.1",
    # authz/gateway.py and authz/app.py use httpx at runtime for the OIDC
    # backchannel, so it is a runtime dependency, not test-only.
    "httpx>=0.28",
    # Transitive of webauthn; floor past CVE-2026-27448 / CVE-2026-27459.
    "pyopenssl>=26.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
    "soft-webauthn>=0.1.4",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "pip-audit>=2.7",
]

[tool.uv]
# fido2 (via test-only soft-webauthn) caps cryptography<45, blocking the
# pyopenssl>=26 security floor. The cap is conservative; the WebAuthn test
# suite verifies fido2 works on current cryptography.
override-dependencies = ["cryptography>=46"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyproxy"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "N", "ASYNC", "RUF"]
ignore = [
    "S101", # assert use: pytest-style asserts in tests; runtime invariants use exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S311"]
"scripts/**" = ["S603"]  # dev tooling invoking fixed local binaries
"tests/e2e/test_cross_plane.py" = ["S603", "S607", "RUF005"]  # subprocess orchestration harness
"src/hyproxy/audit/events.py" = ["S105"]  # event-name enum values, not credentials

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["hyproxy"]

[[tool.mypy.overrides]]
module = ["soft_webauthn"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B101: asserts here are invariant guards / type narrowing; production never
# runs with -O. B105: flags audit-event enum values and the OAuth token_type
# "DPoP" string, none of which are credentials.
skips = ["B101", "B105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "integration: tests requiring a real Postgres instance",
    "e2e: full end-to-end flows through the test RP",
]
